--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -14,7 +14,6 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "concurrently": "^7.2.2",
     "react": "17.0.2",
     "react-native": "0.68.2"
   },
@@ -28,10 +27,12 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
+    "concurrently": "^7.2.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.4.4"
   },
   "resolutions": {
